Format codebase to use MVC & W04 project
